security(install): signature RSA des binaires + checksum obligatoire + README guide
- release.yml : signe chaque binaire (RSA PKCS#1 SHA-256, openssl, cle privee en
  secret CI CLI_SIGNING_PRIVATE_KEY) -> sidecar .sig. Pas d'EV/quota. Skip propre
  si secret absent.
- install.ps1 : checksum SHA-256 OBLIGATOIRE (fail-closed, plus de skip) +
  verification de la signature RSA contre la pubkey EPINGLEE (RSACryptoService
  Provider, compat PS 5.1 + 7). Protege contre une release GitHub compromise.
  .sig absent (transition) -> warning, checksum reste obligatoire.
- README : reecrit en guide d'utilisation concis FR (install, premiers pas,
  table des commandes, exemples, auth, securite).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>